# ChangeLog for dev-java/commons-logging
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-logging/ChangeLog,v 1.6 2003/02/12 05:51:07 vapier Exp $

*commons-logging-1.0.2-r1 (06 Nov 2002)

  08 Dec 2002; Adrian Almenar <strider@gentoo.org> commons-logging-1.0.2-r1.ebuild:
  Fixed DEPEND from virtual/jdk-1.4 to virtual/jdk-1.3.

  24 Nov 2002; Adrian Almenar <strider@gentoo.org>
  Releasing it, since it has been tested a lot and works very well.

  06 Nov 2002; Adrian Almenar <strider@gentoo.org> commons-logging-1.0.2-r1.ebuild:
  Fixed some extra tabs. 

  06 Nov 2002; Adrian Almenar <strider@gentoo.org> commons-logging-1.0.2-r1.ebuild files/digest-commons-logging-1.0.2-r1:
  Changed DEPEND, this ebuild now depends on log4j and jdk-1.4, cause it
  abstract all logging api located on both products. Changed DESCRIPTION for a
  better understanding of what this is.

*commons-logging-1.0.2 (06 Nov 2002)

  06 Nov 2002; Adrian Almenar <strider@gentoo.org> ChangeLog commons-logging-1.0.2.ebuild files/digest-commons-logging-1.0.2 :
  Initial import.