@@ -1,0 +1,26 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-logging/Attic/commons-logging-1.0.2-r2.ebuild,v 1.1 2003/03/22 12:24:43 absinthe Exp $
+
+inherit jakarta-commons
+
+S="${WORKDIR}/${P}-src/logging"
+DESCRIPTION="The Jakarta-Commons Logging package is an ultra-thin bridge between different logging libraries."
+HOMEPAGE="http://jakarta.apache.org/commons/logging.html"
+SRC_URI="http://jakarta.apache.org/builds/jakarta-commons/release/${PN}/v${PV}/${P}-src.tar.gz"
+DEPEND=">=virtual/jdk-1.3
+	>=dev-java/log4j-1.2.5
+	>=dev-java/ant-1.4"
+RDEPEND=">=virtual/jdk-1.3"
+LICENSE="Apache-1.1"
+SLOT="0"
+KEYWORDS="~x86"
+IUSE="doc jikes junit"
+
+src_compile() {
+	[ -f LICENSE.txt ] && cp LICENSE.txt ../LICENSE
+	jakarta-commons_src_compile myconf make
+	jakarta-commons_src_install dojar
+	use doc && jakarta-commons_src_compile makedoc
+	use doc && jakarta-commons_src_install html
+}
