@@ -1,0 +1,1 @@
+MD5 78bfaac25906a54b925bcc285872c9c9 commons-logging-1.0.2-src.tar.gz 33550
